[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "us211-api"
version = "0.1.0"
description = "Unified REST API for US 211 health & human services data (HSDS)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Elijah Wilkins" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["us211"]

[tool.ruff]
line-length = 100
target-version = "py311"
